Issue #SB-6814, Feat : Added margin for ftb container not to overlap with scroller and image upon urdu support

--- a/renderer/styles/style.css
+++ b/renderer/styles/style.css
@@ -29,6 +29,7 @@
 }
 
 .qs-ftb-content {
+  margin:5px;
   line-height: 3;
 }
 
